src/backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/part-of: ghas-defender-example
