src/backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: ghas-defender-example
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
