src/backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: app
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: ghas-defender-example
  annotations:
    kubernetes.azure.com/ingress.class: webapprouting.kubernetes.azure.com
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
